// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wire format golden: anthropic > signed thinking passback with thinking enabled 1`] = `
{
  "max_tokens": 6144,
  "messages": [
    {
      "content": "Solve the puzzle.",
      "role": "user",
    },
    {
      "content": [
        {
          "signature": "sig-abc",
          "thinking": "signed reasoning",
          "type": "thinking",
        },
        {
          "id": "tu-2",
          "input": {
            "path": "puzzle.md",
          },
          "name": "read_file",
          "type": "tool_use",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "content": "clue text",
          "is_error": undefined,
          "tool_use_id": "tu-2",
          "type": "tool_result",
        },
      ],
      "role": "user",
    },
  ],
  "model": "claude-sonnet-4-5",
  "system": "SYSTEM PROMPT",
  "temperature": 1,
  "thinking": {
    "budget_tokens": 2048,
    "type": "enabled",
  },
  "tool_choice": {
    "type": "auto",
  },
  "tools": [
    {
      "description": "Read a file from the vault",
      "input_schema": {
        "properties": {
          "path": {
            "description": "Vault-relative path",
            "type": "string",
          },
        },
        "required": [
          "path",
        ],
        "type": "object",
      },
      "name": "read_file",
    },
    {
      "description": "Present the final result",
      "input_schema": {
        "properties": {
          "result": {
            "type": "string",
          },
        },
        "required": [
          "result",
        ],
        "type": "object",
      },
      "name": "attempt_completion",
    },
  ],
}
`;

exports[`wire format golden: anthropic > text-only request 1`] = `
{
  "max_tokens": 4096,
  "messages": [
    {
      "content": "Summarize the vault structure.",
      "role": "user",
    },
    {
      "content": "It has three top folders.",
      "role": "assistant",
    },
    {
      "content": "Go deeper on the second one.",
      "role": "user",
    },
  ],
  "model": "claude-sonnet-4-5",
  "system": "SYSTEM PROMPT",
  "temperature": 0.2,
  "tool_choice": undefined,
  "tools": undefined,
}
`;

exports[`wire format golden: anthropic > tools with prompt caching markers 1`] = `
{
  "max_tokens": 4096,
  "messages": [
    {
      "content": "Read the readme.",
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Reading it now.",
          "type": "text",
        },
        {
          "id": "tu-1",
          "input": {
            "path": "README.md",
          },
          "name": "read_file",
          "type": "tool_use",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "cache_control": {
            "type": "ephemeral",
          },
          "content": "# Readme
Hello world",
          "is_error": undefined,
          "tool_use_id": "tu-1",
          "type": "tool_result",
        },
      ],
      "role": "user",
    },
  ],
  "model": "claude-sonnet-4-5",
  "system": [
    {
      "cache_control": {
        "type": "ephemeral",
      },
      "text": "SYSTEM PROMPT",
      "type": "text",
    },
  ],
  "temperature": 0.2,
  "tool_choice": {
    "type": "auto",
  },
  "tools": [
    {
      "description": "Read a file from the vault",
      "input_schema": {
        "properties": {
          "path": {
            "description": "Vault-relative path",
            "type": "string",
          },
        },
        "required": [
          "path",
        ],
        "type": "object",
      },
      "name": "read_file",
    },
    {
      "cache_control": {
        "type": "ephemeral",
      },
      "description": "Present the final result",
      "input_schema": {
        "properties": {
          "result": {
            "type": "string",
          },
        },
        "required": [
          "result",
        ],
        "type": "object",
      },
      "name": "attempt_completion",
    },
  ],
}
`;

exports[`wire format golden: anthropic > vision blocks 1`] = `
{
  "max_tokens": 4096,
  "messages": [
    {
      "content": [
        {
          "text": "What is in this image?",
          "type": "text",
        },
        {
          "source": {
            "data": "aWNvbg==",
            "media_type": "image/png",
            "type": "base64",
          },
          "type": "image",
        },
      ],
      "role": "user",
    },
  ],
  "model": "claude-sonnet-4-5",
  "system": "SYSTEM PROMPT",
  "temperature": 0.2,
  "tool_choice": undefined,
  "tools": undefined,
}
`;

exports[`wire format golden: bedrock-converse > claude 5 drops temperature (FIX-04-03-12 regression pin) 1`] = `
{
  "inferenceConfig": {
    "maxTokens": 4096,
  },
  "messages": [
    {
      "content": [
        {
          "text": "Summarize the vault structure.",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "It has three top folders.",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "text": "Go deeper on the second one.",
        },
      ],
      "role": "user",
    },
  ],
  "modelId": "global.anthropic.claude-sonnet-5",
  "system": [
    {
      "text": "SYSTEM PROMPT",
    },
  ],
  "toolConfig": undefined,
}
`;

exports[`wire format golden: bedrock-converse > text-only request 1`] = `
{
  "inferenceConfig": {
    "maxTokens": 4096,
    "temperature": 0.2,
  },
  "messages": [
    {
      "content": [
        {
          "text": "Summarize the vault structure.",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "It has three top folders.",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "text": "Go deeper on the second one.",
        },
      ],
      "role": "user",
    },
  ],
  "modelId": "eu.anthropic.claude-sonnet-4-5-v1:0",
  "system": [
    {
      "text": "SYSTEM PROMPT",
    },
  ],
  "toolConfig": undefined,
}
`;

exports[`wire format golden: bedrock-converse > tools with cachePoint markers 1`] = `
{
  "inferenceConfig": {
    "maxTokens": 4096,
    "temperature": 0.2,
  },
  "messages": [
    {
      "content": [
        {
          "text": "Read the readme.",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Reading it now.",
        },
        {
          "toolUse": {
            "input": {
              "path": "README.md",
            },
            "name": "read_file",
            "toolUseId": "tu-1",
          },
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "toolResult": {
            "content": [
              {
                "text": "# Readme
Hello world",
              },
            ],
            "status": "success",
            "toolUseId": "tu-1",
          },
        },
        {
          "cachePoint": {
            "type": "default",
          },
        },
      ],
      "role": "user",
    },
  ],
  "modelId": "eu.anthropic.claude-sonnet-4-5-v1:0",
  "system": [
    {
      "text": "SYSTEM PROMPT",
    },
    {
      "cachePoint": {
        "type": "default",
      },
    },
  ],
  "toolConfig": {
    "toolChoice": {
      "auto": {},
    },
    "tools": [
      {
        "toolSpec": {
          "description": "Read a file from the vault",
          "inputSchema": {
            "json": {
              "properties": {
                "path": {
                  "description": "Vault-relative path",
                  "type": "string",
                },
              },
              "required": [
                "path",
              ],
              "type": "object",
            },
          },
          "name": "read_file",
        },
      },
      {
        "toolSpec": {
          "description": "Present the final result",
          "inputSchema": {
            "json": {
              "properties": {
                "result": {
                  "type": "string",
                },
              },
              "required": [
                "result",
              ],
              "type": "object",
            },
          },
          "name": "attempt_completion",
        },
      },
      {
        "cachePoint": {
          "type": "default",
        },
      },
    ],
  },
}
`;

exports[`wire format golden: bedrock-converse > vision blocks as converse image bytes 1`] = `
{
  "inferenceConfig": {
    "maxTokens": 4096,
    "temperature": 0.2,
  },
  "messages": [
    {
      "content": [
        {
          "text": "What is in this image?",
        },
        {
          "image": {
            "format": "png",
            "source": {
              "bytes": Uint8Array [
                105,
                99,
                111,
                110,
              ],
            },
          },
        },
      ],
      "role": "user",
    },
  ],
  "modelId": "eu.anthropic.claude-sonnet-4-5-v1:0",
  "system": [
    {
      "text": "SYSTEM PROMPT",
    },
  ],
  "toolConfig": undefined,
}
`;

exports[`wire format golden: openai-responses (chatgpt-oauth) > text-only request 1`] = `
{
  "include": [
    "reasoning.encrypted_content",
  ],
  "input": [
    {
      "content": [
        {
          "text": "Summarize the vault structure.",
          "type": "input_text",
        },
      ],
      "role": "user",
      "type": "message",
    },
    {
      "content": [
        {
          "text": "It has three top folders.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
      "type": "message",
    },
    {
      "content": [
        {
          "text": "Go deeper on the second one.",
          "type": "input_text",
        },
      ],
      "role": "user",
      "type": "message",
    },
  ],
  "instructions": "SYSTEM PROMPT",
  "model": "gpt-5",
  "reasoning": {
    "effort": "low",
    "summary": "auto",
  },
  "store": false,
  "stream": true,
}
`;

exports[`wire format golden: openai-responses (chatgpt-oauth) > tool history round trip 1`] = `
{
  "include": [
    "reasoning.encrypted_content",
  ],
  "input": [
    {
      "content": [
        {
          "text": "Read the readme.",
          "type": "input_text",
        },
      ],
      "role": "user",
      "type": "message",
    },
    {
      "content": [
        {
          "text": "Reading it now.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
      "type": "message",
    },
    {
      "arguments": "{"path":"README.md"}",
      "call_id": "tu-1",
      "name": "read_file",
      "type": "function_call",
    },
    {
      "call_id": "tu-1",
      "output": "# Readme
Hello world",
      "type": "function_call_output",
    },
  ],
  "instructions": "SYSTEM PROMPT",
  "model": "gpt-5",
  "parallel_tool_calls": false,
  "reasoning": {
    "effort": "low",
    "summary": "auto",
  },
  "store": false,
  "stream": true,
  "tools": [
    {
      "description": "Read a file from the vault",
      "name": "read_file",
      "parameters": {
        "properties": {
          "path": {
            "description": "Vault-relative path",
            "type": "string",
          },
        },
        "required": [
          "path",
        ],
        "type": "object",
      },
      "type": "function",
    },
    {
      "description": "Present the final result",
      "name": "attempt_completion",
      "parameters": {
        "properties": {
          "result": {
            "type": "string",
          },
        },
        "required": [
          "result",
        ],
        "type": "object",
      },
      "type": "function",
    },
  ],
}
`;

exports[`wire format golden: openai-shape > gpt-5 drops temperature and uses max_completion_tokens 1`] = `
{
  "max_completion_tokens": 4096,
  "max_tokens": undefined,
  "messages": [
    {
      "content": "SYSTEM PROMPT",
      "role": "system",
    },
    {
      "content": "Summarize the vault structure.",
      "role": "user",
    },
    {
      "content": "It has three top folders.",
      "role": "assistant",
    },
    {
      "content": "Go deeper on the second one.",
      "role": "user",
    },
  ],
  "model": "gpt-5",
  "stream": true,
  "stream_options": {
    "include_usage": true,
  },
  "temperature": undefined,
  "tools": undefined,
}
`;

exports[`wire format golden: openai-shape > text-only request 1`] = `
{
  "max_completion_tokens": 4096,
  "max_tokens": undefined,
  "messages": [
    {
      "content": "SYSTEM PROMPT",
      "role": "system",
    },
    {
      "content": "Summarize the vault structure.",
      "role": "user",
    },
    {
      "content": "It has three top folders.",
      "role": "assistant",
    },
    {
      "content": "Go deeper on the second one.",
      "role": "user",
    },
  ],
  "model": "gpt-4o",
  "stream": true,
  "stream_options": {
    "include_usage": true,
  },
  "temperature": 0.2,
  "tools": undefined,
}
`;

exports[`wire format golden: openai-shape > tool history round trip 1`] = `
{
  "max_completion_tokens": 4096,
  "max_tokens": undefined,
  "messages": [
    {
      "content": "SYSTEM PROMPT",
      "role": "system",
    },
    {
      "content": "Read the readme.",
      "role": "user",
    },
    {
      "content": "Reading it now.",
      "role": "assistant",
      "tool_calls": [
        {
          "function": {
            "arguments": "{"path":"README.md"}",
            "name": "read_file",
          },
          "id": "tu-1",
          "type": "function",
        },
      ],
    },
    {
      "content": "# Readme
Hello world",
      "role": "tool",
      "tool_call_id": "tu-1",
    },
  ],
  "model": "gpt-4o",
  "stream": true,
  "stream_options": {
    "include_usage": true,
  },
  "temperature": 0.2,
  "tool_choice": "auto",
  "tools": [
    {
      "function": {
        "description": "Read a file from the vault",
        "name": "read_file",
        "parameters": {
          "properties": {
            "path": {
              "description": "Vault-relative path",
              "type": "string",
            },
          },
          "required": [
            "path",
          ],
          "type": "object",
        },
      },
      "type": "function",
    },
    {
      "function": {
        "description": "Present the final result",
        "name": "attempt_completion",
        "parameters": {
          "properties": {
            "result": {
              "type": "string",
            },
          },
          "required": [
            "result",
          ],
          "type": "object",
        },
      },
      "type": "function",
    },
  ],
}
`;

exports[`wire format golden: openai-shape > vision blocks as image_url parts 1`] = `
{
  "max_completion_tokens": 4096,
  "max_tokens": undefined,
  "messages": [
    {
      "content": "SYSTEM PROMPT",
      "role": "system",
    },
    {
      "content": [
        {
          "text": "What is in this image?",
          "type": "text",
        },
        {
          "image_url": {
            "url": "data:image/png;base64,aWNvbg==",
          },
          "type": "image_url",
        },
      ],
      "role": "user",
    },
  ],
  "model": "gpt-4o",
  "stream": true,
  "stream_options": {
    "include_usage": true,
  },
  "temperature": 0.2,
  "tools": undefined,
}
`;
